@@ -244,14 +244,15 @@ void FileUtil::nfsmount(const string &host,
     // get the exported file systems
     Process p;
     StringVector args;
-    args.push_back("--directories");
+    args.push_back("-e");
+    args.push_back("--no-headers");
     args.push_back(host);
     ByteVector stdoutBytes, stderrBytes;
     p.setStdoutBuffer(&stdoutBytes);
     p.setStderrBuffer(&stderrBytes);
     int ret = p.execute("showmount", args);
     if (ret != 0)
-        throw KError("Cannot execute showmount --directories " + host + ":" +
+        throw KError("Cannot execute showmount -e --no-headers " + host + ":" +
             Stringutil::trim(Stringutil::bytes2str(stderrBytes)));
 
     StringVector dirs = Stringutil::splitlines(
@@ -260,9 +261,17 @@ void FileUtil::nfsmount(const string &host,
     mountdir = "";
     for (StringVector::const_iterator it = dirs.begin();
             it != dirs.end(); ++it) {
-        Debug::debug()->trace("Checking %s", (*it).c_str());
-        if (Stringutil::startsWith(dir, *it)) {
-            mountdir = *it;
+
+        // XXX: export cannot contain white spaces
+        StringVector vec = Stringutil::split(*it, ' ');
+        if (vec.size() < 1)
+            throw KError("Invalid line in showmount output: " + *it);
+
+        string exportdir = vec[0];
+
+        Debug::debug()->trace("Checking %s", exportdir.c_str());
+        if (Stringutil::startsWith(dir, exportdir)) {
+            mountdir = exportdir;
             break;
         }
     }
